<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingBottom="24dp">

        <TextView
            android:id="@+id/tvAbout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/About"
            android:textSize="40sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ivLogoLogin"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/clapperboard"
            android:src="@drawable/play_video"/>

        <TextView
            android:id="@+id/tvDevelopers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/developers"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvBruno"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/bruno"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/tvDiego"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/diego"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/tvEduardo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/eduardo"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/tvFelipe"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/felipe"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/tvRafael"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/rafael"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/tvVersion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/version"
            android:textSize="24sp"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="24dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btAboutBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            style="@style/custom_button"
            android:text="@string/back"/>

    </LinearLayout>
</ScrollView>