<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingBottom="24dp">

        <TextView
            android:id="@+id/tvMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/menu"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageView
            android:id="@+id/ivLogoLogin"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/clapperboard"
            android:src="@drawable/play_video"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btMenuInsert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:padding="12dp"
            style="@style/custom_button"
            android:text="@string/insert"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btMenuList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:padding="12dp"
            style="@style/custom_button"
            android:text="@string/list"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btMenuEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:padding="12dp"
            style="@style/custom_button"
            android:text="@string/edit"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btMenuDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:padding="12dp"
            style="@style/custom_button"
            android:text="@string/delete"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btMenuExit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="8dp"
            android:padding="12dp"
            style="@style/custom_button"
            android:text="@string/exit"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btMenuAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            style="@style/custom_button"
            android:text="@string/about"/>

    </LinearLayout>
</ScrollView>